--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -8,6 +8,7 @@
   height: 280px;
   object-fit: cover;
   border-radius: 7px;
+  margin-bottom: 10px;
 }
 
 .postInfo {
@@ -18,7 +19,7 @@
 
 .postCat {
   font-family: "Varela Round", sans-serif;
-  font-size: 11px;
+  font-size: 13px;
   color: #be9656;
   line-height: 20px;
   margin-top: 15px;
@@ -32,6 +33,14 @@
   font-weight: 700;
   margin-top: 15px;
   cursor: pointer;
+}
+
+.postSub {
+  font-family: "Varela Round", sans-serif;
+  font-size: 17px;
+  color: grey;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 .postDate {
@@ -49,6 +58,8 @@
   line-height: 24px;
   margin-top: 15px;
   overflow: hidden;
+  white-space: nowrap;
+  max-lines: 3;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 4;
